--- a/assets/css/d3Style.css
+++ b/assets/css/d3Style.css
@@ -1,7 +1,20 @@
+.grid line {
+  stroke: #ddd;
+}
+
 .aText {
   font-family: sans-serif;
   font-size: 16px;
   text-anchor: middle;
+  /* text-shadow: 2px 2px 2px black;   */
+
+}
+#labl {
+  font-family: sans-serif;
+  /* font-size: 16px; */
+  text-anchor: middle;
+  text-shadow: 2px 2px 2px black;  
+
 }
 
 .active {
