--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+line.horizonalGrid{
+  fill : none;
+ shape-rendering : crispEdges;
+ stroke : black;
+ stroke-width : 1.5px;
+} 
+
 .iframeContainer {
   padding: 20px;
   border: 1px solid #e3e3e3;
@@ -11,8 +18,40 @@ html {
 
 body {
   /* Padding bottom by footer height */
+  background-color: grey;
+  font: 16px sans-serif;
+  /* text-shadow: 3px 3px 2px black;   */
+
   padding-bottom: 80px;
 }
+
+.grid line {
+  stroke: #ddd;
+}
+
+image {
+  /* outline: 1.5px solid white; */
+  z-index: 2);
+}
+
+.tooltip {
+  position: absolute;
+  width: 160px;
+  height: 80px;
+  padding: 2px;
+  padding-top: 8px;
+  font: 12px sans-serif;
+  color: white;
+  text-align: center;
+
+  background: linear-gradient(0deg, rgba(13,226,49,1) 3%, rgba(13,226,49,1) 5%, rgba(26,200,140,1) 9%, rgba(26,200,140,1) 91%, rgba(13,226,49,1) 95%, rgba(13,226,49,1) 97%);
+  border: solid;
+  border-radius: 30px;
+  border-width: 2px;
+  border-color: rgb(255, 255, 255);
+
+}
+
 
 #footer {
   position: absolute;
