--- a/assets/css/d3Style.css
+++ b/assets/css/d3Style.css
@@ -19,6 +19,7 @@
 
 .active {
   font-weight: bold;
+  font-size: 16px; 
   fill: #000;
   transition: fill 0.3s ease-out;
   text-anchor: middle;
@@ -26,6 +27,7 @@
 
 .inactive {
   font-weight: lighter;
+  font-size: 16px; 
   fill: #c9c9c9;
   transition: fill 0.3s ease-out;
   text-anchor: middle;
