--- a/assets/css/d3Style.css
+++ b/assets/css/d3Style.css
@@ -72,7 +72,9 @@
   .stateText {
     display: none;
   }
-
+  .active, .inactive {
+    font-size: 19px;
+  }
   .aText {
     font-size: 14px;
   }
